--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "The most accurate and complete Rollercoin calculator.",
   "main": "index.js",
   "scripts": {
-    "build:production": "npm version patch && npx cordova build android --release && jarsigner -verbose -sigalg SHA256withRSA -digestalg SHA-256 -keystore env/keystore.keystore platforms/android/app/build/outputs/bundle/release/app-release.aab alias_name && npx mkdirp dist && npx cp-cli platforms/android/app/build/outputs/bundle/release/app-release.aab dist/rollercoin-calculator.aab",
+    "android": "cordova run android",
+    "android:build-prod": "npm version patch && npx cordova build android --release && jarsigner -verbose -sigalg SHA256withRSA -digestalg SHA-256 -keystore env/keystore.keystore platforms/android/app/build/outputs/bundle/release/app-release.aab alias_name && npx mkdirp dist && npx cp-cli platforms/android/app/build/outputs/bundle/release/app-release.aab dist/rollercoin-calculator.aab",
     "version": "cordova-set-version && git add config.xml",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
